task06_2_2_fixes